2004-02-13 Mariusz Woloszyn
	* TODO: updated TODO
2004-02-06 Mariusz Woloszyn
	* library.c: added more descriptive error message
2004-02-01  Marcus Meissner  <marcus@jet.franken.de>

	* Sony P-10 as reported by Fred Point.

2004-01-20 Mariusz Woloszyn
	* library.c: added more descriptive error message to capture code
2004-01-20  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp.c: As reported by Eric Valette added Canon PowerShot S50.
	* ptp.c: New sony name, one generic Sony PTP name.

2004-01-18  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp.c: As reported by Thorsten Ehlers - t_ehlers@users.sf.net, 
	  added Nikon Coolpix 3700.

2004-01-10  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp.c: As reported by VICTOR <viaaurea@yahoo.es>,
	  added Olympus cameras: C-350Z, D-560Z, and X-250 (all the same id).

2004-01-05 Mariusz Woloszyn
	* ptp.c: sync with libptp2 code.

2004-01-04  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp.c: Added Canon Digital IXUS i as reported.

2004-01-02  Marcus Meissner  <marcus@jet.franken.de>

	(merged from libptp2)
	* ptp.c, ptp-h.c, ptp-pack.c: added Canon specific PTP extension
          code written by Nikolai Kopanygin.

2003-12-27  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Sony DSC-U20

2003-11-26 Mariusz Woloszyn
	* library.c: make the capture code less sensibe for protocol
	incompatibility.
2003-10-20  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Sony DSC-P52, DSC-P72, DSC-P92
2003-10-14 Marcus Meissner 
	
	* library.c: Fixed progress max value to be 100, or we get Inf/Nan
	  or division by 0...

2003-10-10 Olivier Crete <tester@tester.ca>
	* library.c: Add Canon A80

2003-10-01 Mariusz Woloszyn
	* library.c: removed Canon Digital Rebel, as the report was with the
	  wrong Product ID

2003-09-30 Marcus Meissner 

	* library.c: Added Canon Digital Rebel as reported by Yves Boisjoly
		     <Yves.Boisjoly@sympatico.ca>
	* library.c: Check if we support DeleteObject before calling it. Some